force-app/main/default/objects/AccountPlan/fields/Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Initiatives__c</fullName>
    <inlineHelpText>How can we help the company solve a problem, support a key initiative, or meet a corporate goal?</inlineHelpText>
    <label>Initiatives &amp; Solutions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>