force-app/main/default/objects/AccountPlan/fields/Key_Account_Story__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Story__c</fullName>
    <description>Key Initiatives, Problems, Changes in Key Players, Goals, or anything else  significant)</description>
    <label>Key Account Story</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>