force-app/main/default/objects/AccountPlan/fields/Mission__c.field-meta.xml
<CustomField>
    <fullName>Mission__c</fullName>
    <inlineHelpText>A company mission statement is a concise explanation of an organization&apos;s reason for existence. It describes the company&apos;s purpose, intention, and overall objectives.</inlineHelpText>
    <label>Mission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>