force-app/main/default/objects/AccountPlan/fields/Values__c.field-meta.xml
<CustomField>
    <fullName>Values__c</fullName>
    <inlineHelpText>Company values are the fundamental beliefs and principles that guide a company&apos;s decisions and actions.</inlineHelpText>
    <label>Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>